CRUD mesas, pagina historial ocupaciones y reservas, validaciones JS

--- a/css/dashboard-admin.css
+++ b/css/dashboard-admin.css
@@ -266,6 +266,7 @@ body {
     }
     .navbar .user-info {
         margin-top: 10px;
+        font-size: 13px;
     }
     .icon {
         margin-left: 145px;
