--- a/css/choose_todos.css
+++ b/css/choose_todos.css
@@ -216,5 +216,18 @@ body {
     }
     .navbar .user-info {
         margin-top: 10px;
+        font-size: 13px;
+    }
+    .banner {
+        margin-left: 25px;
+        width: 87%;
+    }
+    .banner h1 {
+        font-size: 1.3rem;
+    }
+    .icon {
+        margin-left: 145px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
