--- a/css/form-editar.css
+++ b/css/form-editar.css
@@ -101,10 +101,11 @@ button[type="submit"]:hover {
 
 .message {
     margin-bottom: 15px;
-    padding: 10px;
+    padding: 5px;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 20px;
     text-align: center;
+    color: #f8071f;
 }
 
 .message p {
